Fix T53552: Unneeded particle cache reset on frame change

There shouldn't be a time dependency to cache reset operation.